--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,7 +1,7 @@
 # 日志输出级别（INFO）和输出位置（stdout，R）
-log4j.rootLogger=INFO, stdout
+log4j.rootLogger=DEBUG, stdout
 
 # 日志输出位置为控制台
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=[MYZONE] %p [%t] %C.%M(%L) | %m%n
+log4j.appender.stdout.layout.ConversionPattern=[MYZONE] %p [%t] %C.%M(%L) - %m%n
