--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 # 日志输出级别（INFO）和输出位置（stdout，R）
-log4j.rootLogger=DEBUG, stdout
+log4j.rootLogger=INFO, stdout
 
 # 日志输出位置为控制台
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
