--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -4,4 +4,4 @@ log4j.rootLogger=INFO, stdout
 # 日志输出位置为控制台
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=[MYZONE] %p [%t] %C.%M(%L) - %m%n
+log4j.appender.stdout.layout.ConversionPattern=[MYZONE] %d{yyyy-MM-dd HH:mm:ss,SSS} %p [%t] %C.%M(%L) - %m%n
