--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,11 @@
             <version>edge-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+            <version>3.2.0</version>
+        </dependency>
     </dependencies>
 
     <build>
