--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,12 @@
             <artifactId>cglib</artifactId>
             <version>3.2.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.9.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
